UIMA-1459 Fixed inefficient conversion from Integer to String
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/sandbox/trunk@798144 13f79535-47bb-0310-9956-ffa450edef68